add node server  execute the code

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Learning Javascript mvc
+Learning Javascript mvc project
+you can run build/node.js file use Node, then will start a web server at http://127.0.0.1:1337/.
+
+you can use this URL test the project.
